--- a/core/src/dird/CMakeLists.txt
+++ b/core/src/dird/CMakeLists.txt
@@ -189,8 +189,8 @@ target_link_libraries(
 
 # is not built by default
 
-# add_executable(testfind ${TSTFNDSRCS}) target_link_libraries(testfind bareos
-# bareosfind jansson ${OPENSSL_LIBS} acl cap lzo2 )
+add_executable(testfind ${TSTFNDSRCS})
+target_link_libraries(testfind bareos bareosfind jansson ${OPENSSL_LIBS} acl cap lzo2 )
 
 install(TARGETS bareos-dir bareos-dbcheck DESTINATION "${sbindir}")
 
