build: make compilation work on ubuntu 22 with openssl 3.0
(cherry picked from commit 2dc8e2badbe61aef9cb32c252f9d0854350bd73c)

--- a/core/src/lib/CMakeLists.txt
+++ b/core/src/lib/CMakeLists.txt
@@ -138,7 +138,11 @@ else()
   list(APPEND BAREOS_SRCS osinfo.cc)
 endif()
 
+
 add_library(bareos SHARED ${BAREOS_SRCS} $<TARGET_OBJECTS:version-obj>)
+
+# openssl 3.0
+target_compile_options(bareos PUBLIC -Wno-deprecated-declarations)
 
 add_library(version-obj OBJECT version.cc)
 target_compile_definitions(
