--- a/core/src/dird/CMakeLists.txt
+++ b/core/src/dird/CMakeLists.txt
@@ -186,7 +186,7 @@ endif()
 add_executable(bareos-dbcheck ${DBCHKSRCS})
 
 target_link_libraries(
-  bareos-dbcheck PRIVATE bareossql bareos bareosfind ${OPENSSL_LIBRARIES}
+  bareos-dbcheck PRIVATE bareossql bareos bareosfind ${OPENSSL_LIBRARIES} CLI11::CLI11
 )
 
 # is not built by default
