--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 #   BAREOS® - Backup Archiving REcovery Open Sourced
 #
-#   Copyright (C) 2019-2021 Bareos GmbH & Co. KG
+#   Copyright (C) 2019-2022 Bareos GmbH & Co. KG
 #
 #   This program is Free Software; you can redistribute it and/or
 #   modify it under the terms of version three of the GNU Affero General Public
@@ -116,6 +116,7 @@ if(NOT hostname)
 endif()
 
 if(BUILD_BAREOS_BINARIES)
+  add_subdirectory(third-party EXCLUDE_FROM_ALL)
   add_subdirectory(core)
   add_subdirectory(webui)
   if(NOT client-only AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
