--- a/core/src/include/config.h.in
+++ b/core/src/include/config.h.in
@@ -3,7 +3,7 @@
 
    Copyright (C) 2012-2012 Free Software Foundation Europe e.V.
    Copyright (C) 2011-2012 Planets Communications B.V.
-   Copyright (C) 2013-2021 Bareos GmbH & Co. KG
+   Copyright (C) 2013-2022 Bareos GmbH & Co. KG
 
    This program is Free Software; you can redistribute it and/or
    modify it under the terms of version three of the GNU Affero General Public
@@ -566,6 +566,9 @@ extern char win_os[];
 #define DISTVER "@DISTVER@"
 
 #endif /* defined(WIN32) */
+
+#define LICENSE_TEXT "@LICENSE_TEXT@"
+
 // clang-format on
 
 #endif  // BAREOS_INCLUDE_CONFIG_H_
